printer/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    configName: k8s-demo-go-printer
  name: k8s-demo-go-printer
  namespace: default
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: k8s-demo-go-printer
    app.kubernetes.io/name: k8s-demo-go-printer
  type: NodePort
